--- a/no1.html
+++ b/no1.html
@@ -1,58 +1,30 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-<link rel="stylesheet" href="style.css">
-<meta charset="UTF-8" />
-
-<meta name="viewport"
-
-content="width=device-width,
-
-initial-scale=1.0" />
-
-<title>Ask Her Out</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Think Again</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-<div class="container"><div class="container">
+  <div class="container">
+    <div class="tenor-gif-embed"
+      data-postid="5992280527583416561"
+      data-share-method="host"
+      data-aspect-ratio="0.94"
+      data-width="100%">
+      <a href="https://tenor.com/view/worried-monkey-gif">GIF</a>
+    </div>
 
-<div class="tenor-gif-embed"
+    <h1>Ek aur baar soch le 😭</h1>
 
-data-postid="22050818" data-share-method="host"
+    <div class="btn">
+      <a href="yes.html">Yes</a>
+      <a href="no2.html">No</a>
+    </div>
+  </div>
 
-data-aspect-ratio="1" data-width="100%"><a
-
-href="https://tenor.com/view/
-
-mochi-gif-22050818">Mochi Sticker</a>from <a
-
-href="https://tenor.com/search/
-
-mochi-stickers">Mochi Stickers</a></div> <script
-
-type="text/javascript" async src="https://tenor.
-
-com/embed.js"></script>
-
-<h1>Soch le ache se!!  phir mat bolna</h1>
-
-<p></p>
-
-<div class="btn">
-
-<a href="yes.html">Yes</a>
-
-<a href="no2.html">No</a>
-
-</div>
-
-</div>
-
+  <script async src="https://tenor.com/embed.js"></script>
 </body>
-
 </html>
-
