--- a/no2.html
+++ b/no2.html
@@ -1,42 +1,30 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-<link rel="stylesheet" href="style.css">
-<meta charset="UTF-8" />
-
-<meta name="viewport"
-
-content="width=device-width,
-
-initial-scale=1.0" />
-
-<title>Ask Her Out</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Last Chance</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
+  <div class="container">
+    <div class="tenor-gif-embed"
+      data-postid="22050818"
+      data-share-method="host"
+      data-aspect-ratio="1"
+      data-width="100%">
+      <a href="https://tenor.com/view/mochi-gif">GIF</a>
+    </div>
 
-<div class="container"><div class="container"><div class="container">
+    <h1>Soch le ache se 😤</h1>
 
-<div class="tenor-gif-embed" data-postid="5992280527583416561" data-share-method="host" data-aspect-ratio="0.937751" data-width="100%"><a href="https://tenor.com/view/worried-monkey-worried-monkey-gif-5992280527583416561">Worried Monkey Monkey GIF</a>from <a href="https://tenor.com/search/worried+monkey-gifs">Worried Monkey GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-<h1>Ek aur baar Soch le!</h1>
+    <div class="btn">
+      <a href="yes.html">Yes</a>
+      <a href="no3.html">No</a>
+    </div>
+  </div>
 
-<p></p>
-
-<div class="btn">
-
-<a href="yes.html">Yes</a>
-
-<a href="no3.html">No</a>
-
-</div>
-
-</div>
-
+  <script async src="https://tenor.com/embed.js"></script>
 </body>
-
 </html>
-
