--- a/no3.html
+++ b/no3.html
@@ -1,59 +1,31 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-<link rel="stylesheet" href="style.css">
-<meta charset="UTF-8" />
-
-<meta name="viewport"
-
-content="width=device-width,
-
-initial-scale=1.0" />
-
-<title>Ask Her Out</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>No Escape</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-<div class="container"><div class="container"><div class="container">
+  <div class="container">
+    <div class="tenor-gif-embed"
+      data-postid="15974530976611222074"
+      data-share-method="host"
+      data-aspect-ratio="1.26"
+      data-width="100%">
+      <a href="https://tenor.com/view/peach-goma-gif">GIF</a>
+    </div>
 
-<div class="container">
+    <h1>Bnaadeee brooooo 😭❤️</h1>
 
-<div class="tenor-gif-embed"
+    <div class="btn">
+      <a href="yes.html">Yes</a>
+      <a href="#" id="move-random">No</a>
+    </div>
+  </div>
 
-data-postid="15974530976611222074"
-
-data-share-method="host" data-aspect-ratio="1.26923" data-width="100%">
-<a href="https://tenor.com/view/
-
-peach-goma-phone-gif-15974530976611222874">Peach
-
-Goma Phone Sticker</a>from <a href="https://tenor.com/search/peach+goma-stickers">Peach Goma
-
-Stickers</a></div> <script type="text/javascript"
-
-async src="https://tenor.com/embed.js"></script>
-
-<p>Bnaadeee broooooo!!!</p>
-<div class="btn">
-
-<a href="yes.html">Yes</a>
-
-<a href="no3.html" id="move-random">No</a>
-
-</div>
-
-</div>
-
-<script src="./script.js"></script>
-</div>
-
-</div>
-
+  <script src="script.js"></script>
+  <script async src="https://tenor.com/embed.js"></script>
 </body>
-
 </html>
-
