--- a/yes.html
+++ b/yes.html
@@ -1,43 +1,25 @@
-
-
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-<link rel="stylesheet" href="style.css">
-<meta charset="UTF-8" />
-
-<meta name="viewport"
-
-content="width=device-width,
-
-initial-scale=1.0" />
-
-<title>Ask Her Out</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>She Said Yes 💖</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-<div class="container"><div class="container">
-<div class="tenor-gif-embed" data-postid="8921357412949012469" data-share-method="host" data-aspect-ratio="1.01333" data-width="100%"><a href="https://tenor.com/view/smile-gif-8921357412949012469">Smile Sticker</a>from <a href="https://tenor.com/search/smile-stickers">Smile Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="container">
+    <div class="tenor-gif-embed"
+      data-postid="8921357412949012469"
+      data-share-method="host"
+      data-aspect-ratio="1"
+      data-width="100%">
+      <a href="https://tenor.com/view/smile-gif">GIF</a>
+    </div>
 
-<h1>Hehehehe, I knew it!</h1>
+    <h1>Hehehehe 😍 I knew it!</h1>
+  </div>
 
-<p></p>
-
-<div class="btn">
-
-<a href="yes.html">Yes</a>
-
-<a href="no1.html">No</a>
-
-</div>
-
-</div>
-
+  <script async src="https://tenor.com/embed.js"></script>
 </body>
-
 </html>
-
